cmake_minimum_required(VERSION 2.8.3)

SET(CMAKE_CXX_FLAGS "-Wall -g")
SET(CMAKE_C_FLAGS "-Wall -g")

SET(RESULT_DIR bin)
SET(SOURCE_DIR source)
SET(PROJECT_NAME Client)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${RESULT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${RESULT_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${RESULT_DIR})

project(${PROJECT_NAME})

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../SocketLib/include)

LINK_DIRECTORIES(../SocketLib/bin)

SET(SOURCE_FILES ${SOURCE_DIR}/client.cpp )

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} SocketLib)
